# IPod-Shuffle-4-Manager

./: .gitignore  Cargo.toml  README.md  ipod-shuffle-4g.py
docs/: iTunesSD3gen.md  iTunesStats3gen.md
iPod_Control/Speakable/: CacheInfo.plist  VoiceOverDB  cs-CZ.plist  da-DK.plist  de-DE.plist  el-GR.plist  en-AU.plist  en-GB.plist  en-US.plist  es-ES.plist  es-MX.plist  fi-FI.plist  fr-CA.plist  fr-FR.plist  hu-HU.plist  it-IT.plist  ja-JP.plist  ko-KR.plist  nl-NL.plist  no-NO.plist  pl-PL.plist  pt-BR.plist  pt-PT.plist  ro-RO.plist  ru-RU.plist  sk-SK.plist  sv-SE.plist  th-TH.plist  tr-TR.plist  yue-CN.plist  zh-CN.plist
iPod_Control/iTunes/: iTunesDB  iTunesPrefs  iTunesPrefs.plist  iTunesSD
src/: audio.rs  cli.rs  convert.rs  database.rs  main.rs  playlist.rs  shuffler.rs  tts.rs  utils.rs
ui/: README.md  pubspec.yaml
ui/lib/: main.dart  models.dart  theme.dart
ui/lib/pages/: home_page.dart
ui/lib/services/: shuffler_service.dart
ui/lib/widgets/: console_log.dart  ipod_device.dart  knob_slider.dart  led_indicator.dart  sync_button.dart  toggle_switch.dart
ui/test/: widget_test.dart
ui/windows/: CMakeLists.txt
ui/windows/runner/: Runner.rc  main.cpp
