[package]
name = "ipod-shuffle-4g"
version = "1.6.0"
edition = "2021"
description = "用于为较新一代 iPod Shuffle 构建曲目和播放列表数据库的工具"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
md-5 = "0.10"
byteorder = "1"
rayon = "1"
lofty = "0.22"
symphonia = { version = "0.5", features = ["all"] }
mp3lame-encoder = "0.2"
percent-encoding = "2"
regex = "1"
hound = "3"
ctrlc = "3"
msedge-tts = "0.2"

[profile.release]
opt-level = 3
lto = true
